--- a/index.html
+++ b/index.html
@@ -274,7 +274,11 @@
   }
   
   
-  
+  .gradient{
+    
+    background-image: radial-gradient(hsla(115, 100%, 100%, 1),hsla(115, 100%, 100%, 0.5)hsla(115, 100%, 100%, 0))
+    
+  }
   
 
 </style>
